<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alrahiq POS</string>
    <string name="pay_with_palm">ادفع بكف اليد</string>
    <string name="register">التسجيل</string>
    <string name="don_t_have_account">لا يوجد حساب</string>
    <string name="payment_amount">المبلغ</string>
    <string name="pay_confirm">ادفع</string>
    <string name="pay_back">الرجوع</string>
    <string name="palm_view">مشاهدة  كف  اليد</string>
    <string name="payment_status">تفاصيل الدفع</string>
    <string name="payment_status_image">صورة حالة الدفع</string>
    <string name="scan_nfc_enabled_bank_card">امسح NFC وفعل بطاقة البنكية</string>
    <string name="registration_status_icon">التسجيل</string>
    <string name="reg_btn_retry">إعادة</string>
    <string name="reg_btn_Home">الرجوع للرئيسية</string>
    <string name="reg_status_default">فشل عملية التسجيل</string>
    <string name="pay_status_default">فشل الدفع</string>
    <string name="scan_palm">امسح كف اليد</string>
    <string name="btn_skip">تخطي</string>
    <string name="qr_code_image_view">عرض صورة رمز الاستجابة السريعة QR.</string>
    <string name="scan_qr_code">فضلا امسح الباركود بجوالك</string>
    <string name="permission_not_granted">لا يوجد صلاحية</string>
    <string name="more_than_zero">المبلغ يجب ان يكون اكبر من الصفر</string>
    <string name="no_internet">لا يوجد اتصال بالإنترنت.</string>
    <string name="pay_success">تم الدفع بنجاح</string>
    <string name="faild">خطأ</string>
</resources>
<!--<resources>-->
<!--    <string name="app_name">Alrahiq POS</string>-->
<!--    <string name="pay_with_palm">PAY WITH PALM</string>-->
<!--    <string name="register">Register</string>-->
<!--    <string name="don_t_have_account">Don\'t have account</string>-->
<!--    <string name="payment_amount">Amount</string>-->
<!--    <string name="pay_confirm">Confirm</string>-->
<!--    <string name="pay_back">Back</string>-->
<!--    <string name="palm_view">Palm view</string>-->
<!--    <string name="payment_status">Payment status</string>-->
<!--    <string name="payment_status_image">Payment status image</string>-->
<!--    <string name="scan_nfc_enabled_bank_card">Scan NFC enabled bank Card</string>-->
<!--    <string name="registration_status_icon">Registration status icon</string>-->
<!--    <string name="reg_btn_retry">Retry</string>-->
<!--    <string name="reg_btn_Home">Go Home</string>-->
<!--    <string name="reg_status_default">Registration process failed!</string>-->
<!--    <string name="pay_status_default">Payment failed!</string>-->
<!--    <string name="scan_palm">Scan your palm</string>-->
<!--    <string name="btn_skip">Skip</string>-->
<!--    <string name="qr_code_image_view">QR code image view.</string>-->
<!--    <string name="scan_qr_code">Scan QR code with your phone.</string>-->
<!--    <string name="permission_not_granted">Permission not granted.</string>-->
<!--    <string name="more_than_zero">Put amount more than zero.</string>-->
<!--    <string name="no_internet">No internet connection.</string>-->
<!--</resources>-->