<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".fragments.RegistrationStatus">

    <ImageView
        android:layout_margin="@dimen/element_margin_default"
        android:id="@+id/reg_status_icon"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/failed"
        android:contentDescription="@string/registration_status_icon"
        tools:srcCompat="@drawable/failed"
        />
    <LinearLayout
        android:layout_margin="@dimen/element_margin_default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reg_status_msg"
            android:textSize="@dimen/large_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_status_default" />
    </LinearLayout>
    <LinearLayout
        android:layout_margin="@dimen/element_margin_default"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/reg_status_button_retry"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_btn_retry" />
        <Button
            style="@style/Widget.Material3.Button"
            android:id="@+id/reg_status_button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_btn_Home" />
    </LinearLayout>

</LinearLayout>