<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/register_nfc_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/palm_view"
        android:src="@drawable/nfc_scan_720px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/nfc_scan_720px" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/large_text"
        android:text="@string/scan_nfc_enabled_bank_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_nfc_image_view" />

    <Button
        android:id="@+id/btn_reg_skip"
        android:layout_margin="@dimen/element_margin_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>